# Labs

./: fix_github.md
oaip sem2/: README_sem2.txt
oaip sem2/LR1/Task_1/: CMakeLists.txt  CarApp.pro  Makefile  car.cpp  car.h  inputdialog.cpp  inputdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_car.cpp  moc_inputdialog.cpp  moc_mainwindow.cpp  moc_movable_rectangle.cpp  moc_predefs.h  movable_rectangle.cpp  movable_rectangle.h  shape.h
oaip sem2/LR1/Task_1/CarApp.app/Contents/: Info.plist
oaip sem2/LR1/Task_1/CarApp.app/Contents/MacOS/: CarApp
oaip sem2/LR1/Task_1/vs.code/: c_cpp_properties.json
oaip/LR1/: Task_3  Task_3.cpp  program
oaip/LR2 /Task_1.cpp/: Task_1  Task_1.cpp  program
oaip/LR2 /Task_10/: Task_10.cpp  program
oaip/LR2 /Task_11/: Task_11.cpp
oaip/LR2 /Task_12/: Task_12.cpp  program
oaip/LR2 /Task_2/: Task_2  Task_2.cpp  program
oaip/LR2 /Task_3/: Task_3.cpp  program
oaip/LR2 /Task_4/: Task_4.cpp  program
oaip/LR2 /Task_5/: Task_5.cpp
oaip/LR2 /Task_6 /: Task_6.cpp  program
oaip/LR2 /Task_7/: Task_7.cpp  program
oaip/LR2 /Task_8/: Task_8.cpp  program
oaip/LR4/Task_1/: CMakeLists.txt  array_processor.cpp  array_processor.h  main.cpp  main_program  test_array_processor.cpp  test_main.cpp
oaip/LR4/Task_2/: CMakeLists.txt  main.cpp  matrix_utils.cpp  matrix_utils.h  program  tests.cpp
oaip/LR4/Task_3/: CMakeLists.txt  main.cpp  matrix_utils.cpp  matrix_utils.h  program  tests.cpp
oaip/LR4/Task_4/LabWork4_PartC/: CMakeLists.txt
oaip/LR4/Task_4/LabWork4_PartC/Task4/: CMakeLists.txt  array_utils.h  main.cpp
oaip/LR4/Task_4/LabWork4_PartC/Task4/tests/: CMakeLists.txt  array_utils.h  tests.cpp
oaip/LR4/Task_4/LabWork4_PartC/Task5/: CMakeLists.txt  main.cpp  minesweeper.cpp
oaip/LR4/Task_4/LabWork4_PartC/Task5/tests/: CMakeLists.txt  minesweeper.h  tests.cpp
oaip/LR4/Task_4/LabWork4_PartC/Task6/: CMakeLists.txt  magic_square.cpp  magic_square.h  main.cpp
oaip/LR4/Task_4/LabWork4_PartC/Task6/tests/: CMakeLists.txt  magic_square.h  tests.cpp
oaip/LR5/Task_1/: build.sh
oaip/LR5/Task_1/include/: matrix_ops.h
oaip/LR5/Task_1/src/: main.cpp  matrix_ops.cpp
oaip/LR5/Task_1/tests/: test_matrix_ops.cpp
oaip/LR5/Task_2/include/: lib_array_check.h
oaip/LR5/Task_2/src/: lib_array_check.cpp  main.cpp
oaip/LR5/Task_2/tests/: test_array_check.cpp
oaip/LR5/Task_3/: main.cpp  matrix_functions.cpp  matrix_functions.h  tests.cpp
oaip/LR5/Task_4/: main.cpp  matrix_functions.cpp  matrix_functions.h  tests.cpp
oaip/LR5/Task_5/: array_functions.cpp  array_functions.h  main.cpp  tests.cpp
oaip/LR6/Task_1/: CMakeLists.txt  main.cpp
oaip/LR6/Task_2/: CMakeLists.txt  main.cpp
oaip/LR6/Task_3/: CMakeLists.txt  main.cpp
oaip/LR7/Task_1/: CMakeLists.txt  main.cpp
oaip/LR7/Task_2/: CMakeLists.txt  main.cpp
oaip/LR7/Task_3/: CMakeLists.txt  main.cpp
oaip/LR7/Task_4/: CMakeLists.txt  main.cpp
oaip/LR7/Task_5/: CMakeLists.txt  main.cpp
oaip/LR8/Task_1/: book.cpp  book.h  main.cpp
oaip/LR8/Task_2/: main.cpp  product.cpp  product.h
